--- a/styles.css
+++ b/styles.css
@@ -2,5 +2,14 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+}
 
+h1,
+h4 {
+    font-family: 'Monterrat', sans-serif;
+}
+
+body {
+    font-family: 'JetBrains Mono', monospace;
+    
 }
