--- a/styles.css
+++ b/styles.css
@@ -11,5 +11,36 @@ h4 {
 
 body {
     font-family: 'JetBrains Mono', monospace;
-    
+    display: flex;
+    flex-direction: column;
+    gap: 24px;
+    padding: 14px;
+    min-height: 100vh;
+}
+
+h1 {
+    text-emphasis: '⚒️';
+    text-align: center;
+}
+
+form, 
+section {
+    display: flex;
+    flex-direction: column;
+    gap: 14px;
+    width: 100%;
+    max-width: 800px;
+    margin: 0 auto;
+}
+
+form textarea {
+    resize: none;
+    width: 100%;
+    min-height: 60px;
+    padding: 14px;
+}
+
+form button {
+    padding: 4px;
+    cursor: pointer;
 }
