--- a/styles.css
+++ b/styles.css
@@ -43,4 +43,40 @@ form textarea {
 form button {
     padding: 4px;
     cursor: pointer;
+    gap: 14px;
+}
+
+.todoContainer,
+.todo {
+    display: flex;
+    flex-direction: column;
+    gap: 14px;
+}
+
+.todo {
+    padding: 14px;
+    border: 1px solid lightgray;
+    border-radius: 4px;;
+}
+
+.btnContainer {
+    display: flex;
+    gap: 6px;
+    margin-left: auto;
+}
+
+.iconBtn {
+    background: transparent;
+    border: none;
+    outline: none;
+    padding: 0 8px;
+    cursor: pointer;
+    display: grid;
+    place-items: center;
+    aspect-ratio: 1/1;
+    border-radius: 50%;
+}
+
+.iconBtn:hover {
+    background-color: rgb(228, 228, 228);
 }
